src/Orchestrator/src/Tests/FunctionalTests/Helpers/Errors/ThingAssessmentVerifierLottery__NotEnoughFundsError.cs
using Nethereum.ABI.FunctionEncoding.Attributes;

namespace Tests.FunctionalTests.Helpers.Errors;

[Error("ThingAssessmentVerifierLottery__NotEnoughFunds")]
public class ThingAssessmentVerifierLottery__NotEnoughFundsError { }